package eu.heronnet;

option java_package ="eu.heronnet.rpc";

// syntax = "proto2";

message NetworkNode {
    required bytes id = 1;
    repeated Address addresses = 2;
    optional int64 last_seen = 3;
    optional int32 rtt = 4;
}

message Address {
    required bytes ip_address = 1;
    required int32 port = 2;
}

message Bundle {
    required bytes subject = 1;
    repeated Statement statements = 2;
}

message Statement {
    required string predicate = 1;
    oneof object {
        string string_value = 2;
        bytes identifier_value = 3;
        int64 date_value = 4;
        bytes binary_value = 5;
    }
}

message Request {
    required NetworkNode origin = 1;
    oneof body {
    FindValueRequest find_value_request = 2;
    FindNodeRequest find_node_request = 3;
    PingRequest ping_request = 4;
    StoreValueRequest store_value_request= 5;
    }
}

message Response {
    required NetworkNode origin = 1;
    oneof body {
    FindValueResponse find_value_response = 2;
    FindNodeResponse find_node_response = 3;
    PingResponse ping_response = 4;
    }
}

message FindValueRequest {
    required bytes message_id = 10;
    repeated bytes values = 11;
}

message StoreValueRequest{
    required bytes message_id = 10;
    repeated Bundle bundles = 11;
}

message FindValueResponse {
    required bytes message_id = 10;
    repeated Bundle bundles = 11;
}

message FindNodeRequest {
    required bytes message_id = 20;
    required bytes node_id = 21;
}

message FindNodeResponse {
    required bytes message_id = 20;
    repeated NetworkNode found_nodes = 21;
}

message PingRequest {
    required bytes message_id = 30;
}

message PingResponse {
    required bytes message_id = 30;
    required bytes response = 32;
}
